# foundry

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: development-rules.md  implementation-plan.md
docs/schemas/: spec-ask-output.schema.json
schemas/: spec-node-meta.schema.json
spec/: 00-index.md  00-index.meta.json  10-domain-model.md  10-domain-model.meta.json  20-cli-contract.md  20-cli-contract.meta.json
src/: app.rs  cli.rs  main.rs
src/app/: agent.rs  ask.rs  core.rs  derive.rs  impact.rs  init.rs  link.rs  lint.rs  plan.rs  runtime.rs  search.rs  tests.rs  write.rs
src/app/ask/: retrieval.rs  synthesis.rs
templates/commands/base/: design-plan.md  design-review.md  impl-review.md  implement.md  spec-plan.md  spec-review.md  task-breakdown.md
templates/commands/overlays/claude/: design-plan.md  design-review.md  impl-review.md  implement.md  spec-plan.md  spec-review.md  task-breakdown.md
templates/commands/overlays/codex/: design-plan.md  design-review.md  impl-review.md  implement.md  spec-plan.md  spec-review.md  task-breakdown.md
templates/node-docs/: design.md  spec.md  task.md
templates/skills/base/: design-plan.md  design-review.md  impl-review.md  implement.md  spec-plan.md  spec-review.md  task-breakdown.md
templates/skills/overlays/claude/: design-plan.md  design-review.md  impl-review.md  implement.md  spec-plan.md  spec-review.md  task-breakdown.md
templates/skills/overlays/codex/: design-plan.md  design-review.md  impl-review.md  implement.md  spec-plan.md  spec-review.md  task-breakdown.md
tests/: cli_flow.rs
