[package]
name = "foundry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
rusqlite = { version = "0.33", features = ["bundled", "load_extension"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.14"
